c4prj2_input/grade.txt
Grading at Wed Apr  3 01:54:11 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:21:18: error: passing argument 1 of ‘strcpy’ makes pointer from integer without a cast [-Werror=int-conversion]
           strcpy(num[1], str[i]);
                  ^
In file included from input.c:1:0:
/usr/include/string.h:125:14: note: expected ‘char * restrict’ but argument is of type ‘char’
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
input.c:21:26: error: passing argument 2 of ‘strcpy’ makes pointer from integer without a cast [-Werror=int-conversion]
           strcpy(num[1], str[i]);
                          ^
In file included from input.c:1:0:
/usr/include/string.h:125:14: note: expected ‘const char * restrict’ but argument is of type ‘char’
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
